# bitcoin-cosign

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  configuration.yaml
.github/workflows/: check-and-lint.yaml  test.yaml
migrations/: 20220509125133_create_addresses_table.sql  20220509125133_create_users_table.sql  20220509170424_create_users_table.sql  20220509170519_create_addresses_table.sql  20220509173027_create_users_table.sql  20220509173028_create_addresses_table.sql  20220510124415_update_users_table_serial_id.sql  20220510124450_update_addresses_table_serial_id.sql  20220513201557_create_users_table_if_not_exist.sql  20220513201907_create_addresses_table_if_not_exist.sql  20220518144806_create_service_keys_table.sql  20220518200423_update_mnemonics_in_service_keys_table.sql  20220522034558_add_network_to_service_keys_table.sql
scripts/: init_db.sh  migrate.sh
src/: configuration.rs  lib.rs  main.rs  start_up.rs
src/domain/: address.rs  generated_address.rs  mod.rs  new_address_data.rs  new_user.rs  transaction_payload.rs  user_email.rs  user_password.rs  user_transaction.rs  user_xpub.rs  utils.rs  x_pub.rs  xpub.rs
src/lib/: mod.rs
src/routes/: mod.rs
src/routes/addresses/: gen_multisig_address.rs  mod.rs
src/routes/services/: masterkeys.rs  mod.rs
src/routes/transactions/: broadcast_psbt.rs  cosign.rs  mod.rs  transaction.rs
src/routes/users/: create.rs  mod.rs  xpub.rs
src/server/users/: create.rs
src/utils/: address.rs  keys.rs  mod.rs  psbt.rs
tests/: basetest.rs  collect_xpubs_test.rs  create_user_test.rs  generate_address_test.rs  masterkeys_test.rs  ping.rs  ping_test.rs
tests/api/: basetest.rs  collect_xpubs_test.rs  create_user_test.rs  generate_address_test.rs  main.rs  masterkeys_test.rs  ping_test.rs  transaction_test.rs
