[package]
name = "bitcoin-cosign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cosign"
path = "src/lib.rs"

[dependencies]
actix-web = "4.0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.10", features = ["json"]}
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
config = "0.13.1"
uuid = {version = "1.0.0", features = ["v4"]}

[dependencies.sqlx]
version = "0.5.13"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "migrate"
]
