[package]
name = "bitcoin-cosign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cosign"
path = "src/lib.rs"

[dependencies]
actix-web = "4.0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.10", features = ["json"]}
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
config = "0.13.1"
uuid = {version = "1.0.0", features = ["v4"]}
unicode-segmentation = "1"
claim = "0.5.0"
validator = "0.15.0"
bdk = {version = "0.17.0", features = ["rpc", "keys-bip39", "all-keys", "key-value-db"]}
rand = {version = "0.7.0", features = ["getrandom"]}
bitcoin = "0.27.1"
secp256k1 = "0.22.1"
rust-crypto="0.2.36"
sha2="0.10.2"
actix-rt="2.7.0"
wiremock = "0.5.13"
bitcoincore-rpc = "0.15.0"
dirs-next = "2.0.0"

[dependencies.sqlx]
version = "0.5.13"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "migrate"
]